align errors correctly

--- a/packages/augur-ui/src/modules/modal/components/common/common.styles.less
+++ b/packages/augur-ui/src/modules/modal/components/common/common.styles.less
@@ -82,7 +82,7 @@
   }
 
   form.ModalTightForm > p.Error {
-    margin: 0 7rem @size-24;
+    margin: @size-4 @size-32 @size-24;
     padding: 0;
   }
 
